@@ -1,3 +1,5 @@
+- FIX: bug when an organisation or module or revision contains a space (IVY-157)
+- slight modification of xsd in attempt to fix IVY-156
 - IMPROVE: add regexp management in the install ant task (IVY-154)
 
    version 1.3-RC1 - 2006-01-25
